--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/icons8-cloud-refresh-100.png" type="image/x-icon">
     <script src="./assets/scripts/script.js" defer></script>
     <title>Openweather</title>
 </head>
